<resources>
    <string name="id1">Transaction ID:</string>
    <string name="app_name">Transaction history</string>
    <string name="idno">987654321</string>
    <string name="bid">Borrower ID:</string>
    <string name="bidno">Rounak</string>
    <string name="Date">Settled date :07-12-18</string>
    <string name="Lidno">Shweta</string>
    <string name="Lid">Lender ID:</string>
    <string name="Datel">Requested Date:07-11-18</string>
    <string name="Amount">Amount:</string>
    <string name="Cost">5000</string>
    <string name="Button">Ratings</string>
</resources>
